--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=8081
 MONGODB_CNN=mongodb+srv://user_curso_node:SyQsepmrZag3RKlz@cursonode.u425uhc.mongodb.net/cursoDB
+SECRETORPRIVATEKEY=Est03sMyPubl1cK3y23@913
